--- a/src/configVars.mk.in
+++ b/src/configVars.mk.in
@@ -449,53 +449,31 @@ else
   endif
 endif
 
-
-
-
-
-
-
-
-
-
 .cu.$(OBJEXT): $<
 ifeq ($(SCI_MAKE_BE_QUIET),true)
 	@-rm -f $@
 else
 	-rm -f $@
 endif
-          #
-          # .d - most likely gcc... have to explicitly put it in a .d file.
-          #
-          # -M outputs to stdout(err?) dependency info.  Redirect this output
-          # to a temp file.  Prepend that file to replace filename.o with:
-          # <path_to_file>/filename.o.  Then remove the temp file.
-          #
-          ifeq ($(SCI_MAKE_BE_QUIET),true)
-	    @echo "Compiling: $<"
-	    @rm -f $(basename $@).$(CC_DEPEND_EXT)
-	    @$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -M $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
-
-            # Now do the actual compile!
-	    @$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(call repository,$@) -c $< -o $@
-          else
-	    @echo "CREATING DEPENDENCY INFORMATION:"
-	    @rm -f $(basename $@).$(CC_DEPEND_EXT)
-	    $(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -M $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
-
-            # Now do the actual compile!
-	    @echo "ACTUALLY COMPILING:"
-	    $(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(call repository,$@) -c $< -o $@
-          endif
-
-
-
-
-
-
-
-
-
+#
+# .d - most likely gcc... have to explicitly put it in a .d file.
+#
+# -M outputs to stdout(err?) dependency info.
+# Prepend that file to replace filename.o with:
+#     <path_to_file>/filename.o.
+# Note: For the CUDA compiler (nvcc), it is necessary to generate
+#       dependencies after the compilation phase.
+#
+ifeq ($(SCI_MAKE_BE_QUIET),true)
+	@echo "Compiling: $<"
+	@$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@
+	@rm -f $(basename $@).$(CC_DEPEND_EXT)
+	@$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -M $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
+else
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -Xcompiler $(CC_DEPEND_REGEN) $(call repository,$@) -c $< -o $@
+	@rm -f $(basename $@).$(CC_DEPEND_EXT)
+	$(NVCC) $(NVCC_CXXFLAGS) $(INCLUDES) -M $< | sed 's,^$(notdir $@),$@,g' > $(basename $@).$(CC_DEPEND_EXT)
+endif
 
 .cpp.$(OBJEXT): $<
 	-rm -f $@
